# BDFOutputParser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/bdf_output_parser/: __init__.py  classifier.py  core_state.py  formatter.py  models.py  parser.py  patterns.py  symmetry.py
src/bdf_output_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bdf_output_parser/reporters/: markdown.py
tests/: conftest.py  test_classifier.py  test_core_state.py  test_markdown.py  test_models.py  test_parser.py  test_unified_result.py
