[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bdf-output-parser"
version = "0.3.0"
description = "Unified BDF quantum chemistry output parser — structured JSON + Markdown reports"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
core_state = [
    "h5py>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
